# CMake

1. 单个源文件编译/: CMakeLists.txt  main.c  readme.md
2. 同一目录 多个源文件/: CMakeLists.txt  main.c  math_function.c  math_function.h  readme.md
